# worldcup-predictor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
_processed_outputs/worldcup/: bracket_2026.html  cross_tournament.csv  cross_tournament_panel.csv  defense_study_panel.csv  feature_scorecard.csv  group_stage_predictions.csv  groups_2026.csv  live_predictions_2026_bracket.csv  live_simulation.csv  metrics_2018.csv  metrics_2022.csv  predictions_2018.csv  predictions_2022.csv  predictions_2026_bracket.csv  simulation_2018.csv  simulation_2022.csv  simulation_2026.csv
data/raw/apifootball/: L10_S2022.json  L10_S2023.json  L10_S2024.json  L4_S2024.json  L5_S2022.json  L5_S2024.json  L6_S2023.json  L7_S2023.json  L9_S2024.json
data/raw/footballdata_api/: WC_2026_matches.json  WC_teams.json
data/raw/worldcup/: annex_c_raw.txt
notebooks/: 01_EDA.ipynb  01_data_and_hypotheses.ipynb  02_hypothesis_tests.ipynb  03_live_api_tests.ipynb  worldcup_report.ipynb
src/analysis/: evaluation.py
src/worldcup/: README.md  __init__.py  config.py  cross_tournament.py  data.py  defense_study.py  elo.py  features.py  flags.py  live.py  model.py  poster.py  proxy_audit_2022.py  run.py  run_2026.py  simulate.py  squads.py  squads_2022.py  team_strength.py  worldcup2026.py
tests/: test_worldcup.py
